force-app/main/default/objects/DD_Benefit_Spec__c/DD_Benefit_Spec__c.object-meta.xml
<CustomObject>
    <description>CDT code-level benefit definitions with frequency limits and age restrictions. The dental benefit grid.</description>
    <label>Benefit Spec</label>
    <nameField><displayFormat>BN-{000000}</displayFormat><label>Spec ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Benefit Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>