force-app/main/default/objects/DD_Benefit_Spec__c/fields/Age_Max__c.field-meta.xml
<CustomField>
    <fullName>Age_Max__c</fullName>
    <label>Maximum Age</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Maximum age (999 if none)</description>
</CustomField>