force-app/main/default/objects/DD_Benefit_Spec__c/fields/Age_Min__c.field-meta.xml
<CustomField>
    <fullName>Age_Min__c</fullName>
    <label>Minimum Age</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Minimum age (0 if none)</description>
</CustomField>