force-app/main/default/objects/DD_Benefit_Spec__c/fields/CDT_Code__c.field-meta.xml
<CustomField>
    <fullName>CDT_Code__c</fullName>
    <label>CDT Code</label>
    <type>Text</type>
    <length>10</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>ADA CDT procedure code e.g. D0120, D2750</description>
</CustomField>