force-app/main/default/objects/DD_Benefit_Spec__c/fields/CDT_Description__c.field-meta.xml
<CustomField>
    <fullName>CDT_Description__c</fullName>
    <label>CDT Description</label>
    <type>Text</type>
    <length>255</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Procedure description</description>
</CustomField>