force-app/main/default/objects/DD_Benefit_Spec__c/fields/Coverage_Spec__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Spec__c</fullName>
    <label>Coverage Spec</label>
    <type>Lookup</type>
    <referenceTo>DD_Coverage_Spec__c</referenceTo><relationshipLabel>Benefit Specs</relationshipLabel><relationshipName>Benefit_Specs</relationshipName><required>true</required>
    <description>Parent coverage specification</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>