force-app/main/default/objects/DD_Benefit_Spec__c/fields/DHMO_Copay_11A__c.field-meta.xml
<CustomField>
    <fullName>DHMO_Copay_11A__c</fullName>
    <label>DHMO Copay 11A</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>DeltaCare Deluxe copay (null for PPO)</description>
</CustomField>