force-app/main/default/objects/DD_Benefit_Spec__c/fields/DHMO_Copay_17B__c.field-meta.xml
<CustomField>
    <fullName>DHMO_Copay_17B__c</fullName>
    <label>DHMO Copay 17B</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>DeltaCare Core copay</description>
</CustomField>