force-app/main/default/objects/DD_Benefit_Spec__c/fields/Frequency_Limit__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Limit__c</fullName>
    <label>Frequency Limit</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>How many times allowed in the period</description>
</CustomField>