force-app/main/default/objects/DD_Benefit_Spec__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Limitation Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Additional limitation notes</description>
</CustomField>