force-app/main/default/objects/DD_Benefit_Spec__c/fields/Quadrant_Specific__c.field-meta.xml
<CustomField>
    <fullName>Quadrant_Specific__c</fullName>
    <label>Per Quadrant</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Frequency applies per quadrant</description>
</CustomField>