force-app/main/default/objects/DD_Benefit_Spec__c/fields/Requires_Preauth__c.field-meta.xml
<CustomField>
    <fullName>Requires_Preauth__c</fullName>
    <label>Requires Pre-Auth</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Pre-authorization required</description>
</CustomField>