force-app/main/default/objects/DD_Benefit_Spec__c/fields/Tooth_Specific__c.field-meta.xml
<CustomField>
    <fullName>Tooth_Specific__c</fullName>
    <label>Per Tooth</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Frequency applies per tooth</description>
</CustomField>