force-app/main/default/objects/DD_Benefit_Spec__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>CDT_Code__c</columns>
    <columns>CDT_Description__c</columns>
    <columns>Coverage_Spec__c</columns>
    <columns>Frequency_Limit__c</columns>
    <columns>Frequency_Period__c</columns>
</ListView>